--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -50,7 +50,7 @@ dependencies:
   image_picker: ^1.1.2
   image: ^4.0.17
   back_button_interceptor: ^6.0.1
-  flutter_rust_bridge: "1.80.1"
+  flutter_rust_bridge: 1.80.1
   window_manager:
     git:
       url: https://github.com/rustdesk-org/window_manager
@@ -105,7 +105,7 @@ dependencies:
   pull_down_button: ^0.9.3
   device_info_plus: ^9.1.0
   qr_flutter: ^4.1.0
-  extended_text: 14.0.0
+  extended_text: ^13.1.0
   xterm: 4.0.0
   sqflite: 2.2.0
   google_fonts: ^6.2.1
