--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "rustdesk"
+name = "horizon"
 version = "1.4.3"
 authors = ["rustdesk <info@rustdesk.com>"]
 edition = "2021"
 build= "build.rs"
-description = "RustDesk Remote Desktop"
-default-run = "rustdesk"
+description = "horizon Remote Desktop"
+default-run = "horizon"
 rust-version = "1.75"
 
 [lib]
@@ -203,9 +203,9 @@ exclude = ["vdi/host", "examples/custom_plugin"]
 
 [package.metadata.winres]
 LegalCopyright = "Copyright © 2025 Purslane Ltd. All rights reserved."
-ProductName = "RustDesk"
-FileDescription = "RustDesk Remote Desktop"
-OriginalFilename = "rustdesk.exe"
+ProductName = "horizon"
+FileDescription = "horizon Remote Desktop"
+OriginalFilename = "horizon.exe"
 
 [target.'cfg(target_os="windows")'.build-dependencies]
 winres = "0.1"
